Small Changes on test Forms App

--- a/TestRoonApi/App.config
+++ b/TestRoonApi/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <TestRoonApi.Properties.Settings>
             <setting name="RoonCoreName" serializeAs="String">
-                <value>&lt;enter Roon core name&gt;</value>
+                <value>RICSRV</value>
             </setting>
             <setting name="PersistDirectory" serializeAs="String">
                 <value>C:\Temp\</value>
@@ -19,6 +19,9 @@
             <setting name="LogLevel" serializeAs="String">
                 <value>Trace
 </value>
+            </setting>
+            <setting name="MyIPAddress" serializeAs="String">
+                <value>192.168.1.130</value>
             </setting>
         </TestRoonApi.Properties.Settings>
     </userSettings>
